'FLY-3576,FLY-4236,FLY-4286,FLY-3463,FLY-3704,FLY-3959,FLY-4196'

--- a/findly-builder/src/app/components/add-faq/add-faq.component.html
+++ b/findly-builder/src/app/components/add-faq/add-faq.component.html
@@ -156,7 +156,7 @@
         <ng-container >
           <div class="with-conditional-block" >
             <div class="condition-res-titles-block">
-              <div class="label-text">Conditional Response</div>
+              <div class="label-text">Conditional Responses</div>
               <div class="label-info">Displays responses to users based on the conditions provided.</div>
               <div class="btn-sec">
                 <div class="left-btns">
