--- a/findly-builder/src/app/components/add-source/add-source.component.html
+++ b/findly-builder/src/app/components/add-source/add-source.component.html
@@ -481,11 +481,11 @@
 
                     <button mat-button [matMenuTriggerFor]="browse"> <span class="browse adjust_z_index">Browse
                         File</span></button>
-                    <mat-menu #browse="matMenu">
+                    <!-- <mat-menu #browse="matMenu">
                       <li mat-menu-item> <img class="pr-3" src="assets/images/icons/Urlicon.svg">URL</li>
                       <li mat-menu-item (click)="gotoFileUpload()"><img class="pr-3"
                           src="assets/images/icons/localfileupload.svg">Local File Upload</li>
-                    </mat-menu>
+                    </mat-menu> -->
 
 
 
