--- a/findly-builder/src/app/components/apps-home/apps-home.html
+++ b/findly-builder/src/app/components/apps-home/apps-home.html
@@ -217,7 +217,7 @@
                         <div class="coursel-cards-data col-4">
                           <div class="inner-c-data search-experience">
                             <div class="img-block">
-                              <img src="assets/icons/content/carousel-index-manag.svg">
+                              <img src="assets/icons/content/carousel-search-exp.png">
                             </div>
                             <div class="title">Search Experience</div>
                             <div class="desc_text">Search experience is enhanced by defining the presentation of the search interface and results</div>
@@ -241,7 +241,7 @@
                         <div class="coursel-cards-data col-4">
                           <div class="inner-c-data experiments">
                             <div class="img-block">
-                              <img src="assets/icons/content/carousel-data-inte.svg">
+                              <img src="assets/icons/content/carousel-exp.png">
                             </div>
                             <div class="title">Experiments</div>
                             <div class="desc_text">Multiple index & search configuration can be tested to pick the best one that fulfills business needs</div>
