--- a/findly-builder/src/app/components/dashboard/dashboard.component.html
+++ b/findly-builder/src/app/components/dashboard/dashboard.component.html
@@ -236,10 +236,13 @@
                             <div class="table_header row m-0">
                                 <div class="col-10 header-title pl-0">{{'metrics.dash_board_view.Searched_Intent'|
                                     translate}}</div>
-                                <div class="col-2 header-title text-right" (click)="sortByApi('MostSearchedQuries','count')">
+                                <div class="col-2 header-title text-right"
+                                    (click)="sortByApi('MostSearchedQuries','count')">
                                     <span class="d-flex align-items-center flex-column mr-1">
-                                        <img src="assets/icons/caretDown.svg"  (click)="getSortIconVisibility('count','asc')" class="sortImg downArrow">
-                                        <img src="assets/icons/caretDown.svg" (click)="getSortIconVisibility('count','asc')" class="sortImg upArrow">
+                                        <img src="assets/icons/caretDown.svg"
+                                            (click)="getSortIconVisibility('count','asc')" class="sortImg downArrow">
+                                        <img src="assets/icons/caretDown.svg"
+                                            (click)="getSortIconVisibility('count','asc')" class="sortImg upArrow">
                                     </span>
                                     {{'metrics.dash_board_view.Count'| translate}}
                                 </div>
@@ -265,10 +268,13 @@
                             <div class="table_header row m-0">
                                 <div class="col-10 header-title  pl-0">{{'metrics.dash_board_view.Searched_Intent'|
                                     translate}}</div>
-                                <div class="col-2 header-title text-right" (click)="sortByApi('TopQuriesWithNoResults','count')">
+                                <div class="col-2 header-title text-right"
+                                    (click)="sortByApi('TopQuriesWithNoResults','count')">
                                     <span class="d-flex align-items-center flex-column mr-1">
-                                        <img src="assets/icons/caretDown.svg"  (click)="getSortIconVisibility('count','asc')" class="sortImg downArrow">
-                                        <img src="assets/icons/caretDown.svg"  (click)="getSortIconVisibility('count','desc')" class="sortImg upArrow">
+                                        <img src="assets/icons/caretDown.svg"
+                                            (click)="getSortIconVisibility('count','asc')" class="sortImg downArrow">
+                                        <img src="assets/icons/caretDown.svg"
+                                            (click)="getSortIconVisibility('count','desc')" class="sortImg upArrow">
                                     </span>
                                     {{'metrics.dash_board_view.Count'| translate}}
                                 </div>
@@ -319,38 +325,55 @@
                             <div class="table_header row m-0">
                                 <div class="col-4 header-title  pl-0" (click)="sortByApi('TopSearchResults','answer')">
                                     <span class="d-flex align-items-center flex-column mr-1">
-                                        <img src="assets/icons/caretDown.svg" (click)="getSortIconVisibility('answer','asc')" class="sortImg downArrow">
-                                        <img src="assets/icons/caretDown.svg"  (click)="getSortIconVisibility('answer','desc')" class="sortImg upArrow">
+                                        <img src="assets/icons/caretDown.svg"
+                                            (click)="getSortIconVisibility('answer','asc')" class="sortImg downArrow">
+                                        <img src="assets/icons/caretDown.svg"
+                                            (click)="getSortIconVisibility('answer','desc')" class="sortImg upArrow">
                                     </span>
                                     {{'metrics.dash_board_view.Searched_Intent'|translate}}
                                 </div>
                                 <!-- <div class="col-1 header-title text-right"><img src="assets/icons/sort_up_down.svg"></div> -->
-                                <div class="col-2 header-title" (click)="sortByApi('TopSearchResults','appearances')" >
+                                <div class="col-2 header-title" (click)="sortByApi('TopSearchResults','appearances')">
                                     <span class="d-flex align-items-center flex-column mr-1">
-                                        <img src="assets/icons/caretDown.svg" (click)="getSortIconVisibility('appearances','asc')"  class="sortImg downArrow">
-                                        <img src="assets/icons/caretDown.svg" (click)="getSortIconVisibility('appearances','desc')"  class="sortImg upArrow">
+                                        <img src="assets/icons/caretDown.svg"
+                                            (click)="getSortIconVisibility('appearances','asc')"
+                                            class="sortImg downArrow">
+                                        <img src="assets/icons/caretDown.svg"
+                                            (click)="getSortIconVisibility('appearances','desc')"
+                                            class="sortImg upArrow">
                                     </span>
                                     {{'metrics.dash_board_view.Appearances'| translate}}
                                 </div>
                                 <div class="col-2 header-title" (click)="sortByApi('TopSearchResults','clicks')">
                                     <span class="d-flex align-items-center flex-column mr-1">
-                                        <img src="assets/icons/caretDown.svg"  (click)="getSortIconVisibility('clicks','asc')" class="sortImg downArrow">
-                                        <img src="assets/icons/caretDown.svg" (click)="getSortIconVisibility('clicks','desc')" class="sortImg upArrow">
+                                        <img src="assets/icons/caretDown.svg"
+                                            (click)="getSortIconVisibility('clicks','asc')" class="sortImg downArrow">
+                                        <img src="assets/icons/caretDown.svg"
+                                            (click)="getSortIconVisibility('clicks','desc')" class="sortImg upArrow">
                                     </span>
                                     {{'metrics.dash_board_view.Clicks'| translate}}
                                 </div>
-                                <div class="col-2 header-title" (click)="sortByApi('TopSearchResults','clickThroughRate')">
+                                <div class="col-2 header-title"
+                                    (click)="sortByApi('TopSearchResults','clickThroughRate')">
                                     <span class="d-flex align-items-center flex-column mr-1">
-                                        <img src="assets/icons/caretDown.svg" (click)="getSortIconVisibility('clickThroughRate','asc')" class="sortImg downArrow">
-                                        <img src="assets/icons/caretDown.svg" (click)="getSortIconVisibility('clickThroughRate','desc')" class="sortImg upArrow">
+                                        <img src="assets/icons/caretDown.svg"
+                                            (click)="getSortIconVisibility('clickThroughRate','asc')"
+                                            class="sortImg downArrow">
+                                        <img src="assets/icons/caretDown.svg"
+                                            (click)="getSortIconVisibility('clickThroughRate','desc')"
+                                            class="sortImg upArrow">
                                     </span>
                                     {{'metrics.dash_board_view.ctr'| translate}}
                                 </div>
                                 <!--  ngbTooltip='Click-Through Rate' -->
                                 <div class="col-2 header-title" (click)="sortByApi('TopSearchResults','avgPosition')">
                                     <span class="d-flex align-items-center flex-column mr-1">
-                                        <img src="assets/icons/caretDown.svg" (click)="getSortIconVisibility('avgPosition','asc')" class="sortImg downArrow">
-                                        <img src="assets/icons/caretDown.svg" (click)="getSortIconVisibility('avgPosition','desc')" class="sortImg upArrow">
+                                        <img src="assets/icons/caretDown.svg"
+                                            (click)="getSortIconVisibility('avgPosition','asc')"
+                                            class="sortImg downArrow">
+                                        <img src="assets/icons/caretDown.svg"
+                                            (click)="getSortIconVisibility('avgPosition','desc')"
+                                            class="sortImg upArrow">
                                     </span>{{'metrics.dash_board_view.Avg_Position'| translate}}
                                 </div>
                                 <!-- <div class="col-1 header-title text-center"><img src="assets/icons/pos-thumb.svg"></div>
@@ -443,16 +466,6 @@
                                 <img src="assets/icons/help.svg" placement="top-center"
                                     ngbTooltip="{{'metrics.dash_board_view.feedback_tooltip' | translate}}"
                                     [container]="'body'" tooltipClass="dashboard-custom-tooltips" />
-                            </div>
-                            <div class="slider">
-                                <label class="kr-sg-toggle">
-                                    <input type="checkbox" (change)="updateFeedback()"
-                                        [(ngModel)]="searchExperienceConfig?.interactionsConfig.feedbackExperience.queryLevel">
-                                    <div class="slider"><span class="enabled">{{'metrics.dash_board_view.enable' |
-                                            translate}}</span><span class="disabled">{{'metrics.dash_board_view.disable'
-                                            |
-                                            translate}}</span></div>
-                                </label>
                             </div>
                         </div>
                         <div class="empty-feedback"
