--- a/findly-builder/src/app/components/insights/insights.component.scss
+++ b/findly-builder/src/app/components/insights/insights.component.scss
@@ -368,12 +368,12 @@
 
 .query_analytics_content{
     position: absolute;
-    top: 163px;
+    // top: 163px;
     right: 155px;
     background: #FFFFFF;
     box-shadow: 0px 0px 4px rgb(0 0 0 / 25%);
     border-radius: 8px;
-    width: 185px;
+    width: 288px;
     padding: 17px 15px;
     z-index: 10000;
     &::before{
