--- a/findly-builder/src/app/components/search-insights/search-insights.component.html
+++ b/findly-builder/src/app/components/search-insights/search-insights.component.html
@@ -90,7 +90,7 @@
                                         </span>
                                         {{'metrics.search_insights.Search_results'| translate}}
                                     </div>
-                                    <div class="col-2 title" (click)="sortByApi('QueriesWithResults','searches')">
+                                    <div class="col-1 title" (click)="sortByApi('QueriesWithResults','searches')">
                                         <span class="d-flex align-items-center flex-column mr-1">
                                             <img src="assets/icons/caretDown.svg"
                                                 (click)="getSortIconVisibility('searches','asc')"
@@ -105,7 +105,7 @@
                                             [container]="'body'" tooltipClass="dashboard-custom-tooltips"
                                             class="pl-1"><img src="assets/icons/Info_gray.svg"></span>
                                     </div>
-                                    <div class="col-2 title" (click)="sortByApi('QueriesWithResults','count')">
+                                    <div class="col-1 title" (click)="sortByApi('QueriesWithResults','count')">
                                         <span class="d-flex align-items-center flex-column mr-1">
                                             <img src="assets/icons/caretDown.svg"
                                                 (click)="getSortIconVisibility('count','asc')"
@@ -118,6 +118,34 @@
                                             ngbTooltip="Number of times where at least one result of the query was clicked on by the end-users"
                                             [container]="'body'" tooltipClass="dashboard-custom-tooltips"
                                             class="pl-1"><img src="assets/icons/Info_gray.svg"></span>
+                                    </div>
+                                    <div class="col-1 title" (click)="sortByApi('QueriesWithResults','count')">
+                                        <span class="d-flex align-items-center flex-column mr-1">
+                                            <img src="assets/icons/caretDown.svg"
+                                                (click)="getSortIconVisibility('count','asc')"
+                                                class="sortImg downArrow">
+                                            <img src="assets/icons/caretDown.svg"
+                                                (click)="getSortIconVisibility('count','asc')" class="sortImg upArrow">
+                                        </span>
+                                        {{'metrics.search_insights.Positive_Feedback'| translate}} <span
+                                            class="info-icon" placement="top-center" [ngbTooltip]="feedbackDisableDate"
+                                            [container]="'body'" tooltipClass="dashboard-custom-tooltips" class="pl-1"
+                                            *ngIf="!(searchExperienceConfig?.interactionsConfig?.feedbackExperience?.queryLevel)"><img
+                                                src="assets/icons/Info-red.svg"></span>
+                                    </div>
+                                    <div class="col-1 title" (click)="sortByApi('QueriesWithResults','count')">
+                                        <span class="d-flex align-items-center flex-column mr-1">
+                                            <img src="assets/icons/caretDown.svg"
+                                                (click)="getSortIconVisibility('count','asc')"
+                                                class="sortImg downArrow">
+                                            <img src="assets/icons/caretDown.svg"
+                                                (click)="getSortIconVisibility('count','asc')" class="sortImg upArrow">
+                                        </span>
+                                        {{'metrics.search_insights.Negative_Feedback'| translate}} <span
+                                            class="info-icon" placement="top-center" [ngbTooltip]="feedbackDisableDate"
+                                            [container]="'body'" tooltipClass="dashboard-custom-tooltips" class="pl-1"
+                                            *ngIf="!(searchExperienceConfig?.interactionsConfig?.feedbackExperience?.queryLevel)"><img
+                                                src="assets/icons/Info-red.svg"></span>
                                     </div>
                                 </div>
                                 <div class="table_body row m-0"
