--- a/findly-builder/src/app/components/search-insights/search-insights.component.scss
+++ b/findly-builder/src/app/components/search-insights/search-insights.component.scss
@@ -177,7 +177,7 @@
         align-items: center;
         box-shadow: inset 0px -1px 0px #E4E5E7;
         .title {
-            padding: 0 5px;
+            // padding: 0 5px;
             font-style: normal;
             font-weight: 500;
             font-size: 12px;
