--- a/findly-builder/src/app/components/weights/weights.component.html
+++ b/findly-builder/src/app/components/weights/weights.component.html
@@ -106,7 +106,7 @@
                             <button class="dropdown-toggle dropdown-input" id="dropdownBasic1" data-toggle="dropdown"
                                 ngbDropdownAnchor (click)="clearcontentSrcW()">
 
-                                {{addEditWeighObj.fieldName? addEditWeighObj.fieldName :"Choose feild"}}
+                                {{addEditWeighObj.fieldName? addEditWeighObj.fieldName :"Choose field"}}
 
                             </button>
                             <ul class="dropdown-menu content-menu faq-filter-add col-12 mw-100"
