--- a/findly-builder/src/app/components/faq-source/faq-source.component.html
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.html
@@ -519,6 +519,7 @@
                                                             <img src="assets/icons/faq/dislikes.svg">{{selectedFaq.stats.thumbsdown ||0}}
                                                         </div>                                                            -->
                                                     </div>
+                                                   
                                                     <div class="d-flex col-12 conditions-response-block">
                                                         <div class="title col-2 px-0">{{'faqSource.conditions' | translate}} :</div>
                                                         <div class="right-content col-10 px-0 condition-content">
@@ -594,7 +595,10 @@
                                                             </div>
                                                         </div>
                                                     </div>
-                                                    <div class="data-inner-content" >
+                                                    <div class="field_data" *cdkDragPreview>
+                                                        <div class="title text-truncate"></div>
+                                                    </div>
+                                                    <div class="data-inner-content">
                                                         <div class="response-text">{{consitionalAnswer.answers[0]?.text}}</div>   
                                           
                                                         <div class="conditions-list">
